--- a/mapa/css/_mainPage.scss
+++ b/mapa/css/_mainPage.scss
@@ -158,6 +158,17 @@ body{
   & .swiper-slide-active{
     opacity: 1;
   }
+  &__itemText{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -moz-box;
+    -moz-box-orient: vertical;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    line-clamp: 3;
+    box-orient: vertical;
+  }
 }
 
 .grid{
