--- a/mapa/css/_footer.scss
+++ b/mapa/css/_footer.scss
@@ -5,7 +5,7 @@
   background-position: center;
   border: 1px solid transparent;
   position: relative;
-  z-index: 100;
+  z-index: 50;
   &::after{
     content: "";
     position: absolute;
@@ -60,6 +60,7 @@
     }
     a{
       color: $white;
+      white-space: nowrap;
     }
   }
   &__img{
