--- a/mapa/css/_other.scss
+++ b/mapa/css/_other.scss
@@ -6,3 +6,11 @@
     position: absolute;
   }
 }
+.wpcf7-not-valid-tip{
+  display: none !important;
+}
+.wpcf7 form.invalid .wpcf7-response-output, .wpcf7 form.unaccepted .wpcf7-response-output, .wpcf7 form .wpcf7-response-output, .wpcf7 form .wpcf7-response-output {
+  border:none !important;
+  padding: 0 !important;
+  margin: 20px 0 !important;
+}
