--- a/mapa/css/style.css
+++ b/mapa/css/style.css
@@ -7015,6 +7015,16 @@ button.swiper-pagination-bullet {
   position: absolute;
 }
 
+.wpcf7-not-valid-tip {
+  display: none !important;
+}
+
+.wpcf7 form.invalid .wpcf7-response-output, .wpcf7 form.unaccepted .wpcf7-response-output, .wpcf7 form .wpcf7-response-output, .wpcf7 form .wpcf7-response-output {
+  border: none !important;
+  padding: 0 !important;
+  margin: 20px 0 !important;
+}
+
 @-webkit-keyframes rotate {
   from {
     -webkit-transform: rotate(360deg);
@@ -7192,15 +7202,15 @@ span > a:active {
 }
 
 ::-webkit-scrollbar {
-  background-color: transparent;
+  background-color: #eaeaea;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #929292;
+  background-color: #424242;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #b2b2b2;
+  background-color: #424242;
 }
 
 input::-webkit-outer-spin-button,
@@ -7221,6 +7231,10 @@ input[type="number"] {
 }
 
 .overflow-hidden {
+  overflow: hidden;
+}
+
+.noscroll {
   overflow: hidden;
 }
 
@@ -7709,6 +7723,7 @@ input[type="number"] {
 }
 
 .madeAva {
+  white-space: nowrap;
   color: #eaeaea;
 }
 
@@ -7817,6 +7832,7 @@ input[type="number"] {
 }
 
 .burger svg {
+  overflow: visible;
   stroke: #eaeaea;
 }
 
@@ -7896,7 +7912,7 @@ input[type="number"] {
 
 .menu {
   position: fixed;
-  z-index: 40;
+  z-index: 100;
   height: 100vh;
   width: 100%;
   color: #eaeaea;
@@ -7996,7 +8012,7 @@ input[type="number"] {
   background-position: center;
   border: 1px solid transparent;
   position: relative;
-  z-index: 100;
+  z-index: 50;
 }
 
 .footerWrap::after {
@@ -8085,6 +8101,7 @@ input[type="number"] {
 
 .footer__menu a {
   color: #eaeaea;
+  white-space: nowrap;
 }
 
 .footer__img {
@@ -8280,6 +8297,17 @@ body.white {
 
 .news .swiper-slide-active {
   opacity: 1;
+}
+
+.news__itemText {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -moz-box;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  line-clamp: 3;
+  box-orient: vertical;
 }
 
 .grid {
