--- a/zapol/css/_header.scss
+++ b/zapol/css/_header.scss
@@ -56,3 +56,60 @@
     }
   }
 }
+.prel{
+  position:fixed;
+  background-color: $white;
+  width: 100%;
+  height: 100vh;
+  z-index: 1000;
+  &__logo{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 1001;
+    width: 100px;
+    height: auto;
+    & g{
+      overflow: hidden;
+      & > *{
+        transition: 0.5s;
+        fill: $dark-green;
+      }
+      &:nth-of-type(2) > *{transition-delay: 0.0s;}
+      &:nth-of-type(3) > *{transition-delay: 0.2s;}
+      &:nth-of-type(1) > *{transition-delay: 0.4s;}
+    }
+    &_hide{
+      & g > *{
+        transform: translateY(120%);
+        &:nth-of-type(2) > *{transition-delay: 0.0s;}
+        &:nth-of-type(3) > *{transition-delay: 0.2s;}
+        &:nth-of-type(1) > *{transition-delay: 0.4s;}
+      }
+    }
+  }
+  &__bg{
+    position: absolute;
+    bottom: 0%;left: 50%;width: 100%;height: 100%;
+    height: 0;
+    transition:1s;
+    transform:translate(-50%, 0%);
+    &_show{
+      height: 100% ;
+    }
+    &_hide{
+      width: 10vw;
+      height: 10vh;
+      opacity: 0;
+      transition: 1s;
+      transform:translate(-50%, -50%);
+    }
+  }
+  &__bgImg{
+    position: absolute;
+    bottom: 0;left: 0;width: 100%;height: 100%;
+    object-fit: cover;
+    object-position: center bottom;
+  }
+}
