--- a/zapol/css/_pageHome.scss
+++ b/zapol/css/_pageHome.scss
@@ -72,14 +72,14 @@
   }
 }
 .hGallery{
-    img{
-      margin-right: 4vw;
-      &:last-of-type{
-        margin-right: 0;
-      }
-    }
+  &__img{
+    height: 400px;
+    @include media-breakpoint-down(lg) {height: 320px;}
+    @include media-breakpoint-down(md) {height: 250px;}
+    @include media-breakpoint-down(sm) {height: 200px;}
+  }
   & .swiper-slide{
-    width: auto !important;
+    width: min-content !important;
   }
   & .swiper-container{
     overflow: visible;
