--- a/knauf/css/_news.scss
+++ b/knauf/css/_news.scss
@@ -33,3 +33,31 @@
     }
   }
 }
+
+.newsDFirst{
+  &__gray{
+    background-color: $gray;
+    color: $white;
+  }
+  &__imgW{
+    position: relative;
+    padding-bottom: 700px;
+    img{
+      position: absolute;
+      top: 0;left: 0;width: 100%;height: 100%;
+      object-fit: cover;
+    }
+  }
+
+}
+.newsBody{
+  &__imgW{
+    position: relative;
+    padding-bottom: 550px;
+    img{
+      position: absolute;
+      top: 0;left: 0;width: 100%;height: 100%;
+      object-fit: cover;
+    }
+  }
+}
